--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
-
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plugin Name</title>
+    <title>RasterMan - Image Editor</title>
   </head>
   <body>
     <div id="root"></div>
